<resources>
    <string name="app_name">userCenter</string>
    <string name="login">登录</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_password_forget">忘记密码？</string>
    <string name="register">注册</string>
    <string name="register_ver_code">发送验证码</string>
    <string name="register_ver_code_hint">请输入验证码</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_pass">请输入密码</string>
</resources>
