<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/icon_bg_login"/>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/icon_back_white"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_15"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_18"
            android:paddingTop="@dimen/dp_50"
            android:text="@string/register"
            android:gravity="center"/>
    </FrameLayout>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:hint="@string/edit_phone"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="#333333"
        android:maxLength="11"
        android:background="@drawable/shape_circular_register_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="73dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp">

        <EditText
            android:id="@+id/editVerCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:hint="@string/register_ver_code_hint"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="#808080"
            android:maxLength="6"
            android:background="@drawable/shape_circular_register_but"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:hint="@string/register_ver_code"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="#808080"
            android:paddingRight="@dimen/dp_10"
            android:background="@drawable/shape_circular_register_but"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:hint="@string/edit_pass"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="#333333"
        android:maxLength="20"
        android:background="@drawable/shape_circular_register_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="@dimen/dp_15"/>


    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:background="@drawable/shape_circular_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="50dp"/>


</LinearLayout>
