<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/icon_bg_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_40">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/icon_back_white"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="@dimen/sp_18"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/login"
                android:gravity="center"/>

        </LinearLayout>

    </FrameLayout>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:hint="@string/login_account"
        android:paddingLeft="@dimen/dp_10"
        android:textColor="#333333"
        android:maxLength="11"
        android:background="@drawable/shape_circular_register_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="73dp"/>

    <EditText
        android:id="@+id/editPassWord"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:hint="@string/login_password"
        android:paddingLeft="@dimen/dp_10"
        android:textColorHint="#808080"
        android:textColor="#333333"
        android:maxLength="20"
        android:inputType="textPassword"
        android:background="@drawable/shape_circular_register_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:text="登录"
        android:textColor="#ffffff"
        android:background="@drawable/shape_circular_but"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6c6c6c"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/login_password_forget"
        android:layout_gravity="center"/>

</LinearLayout>
